--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,9 +1,26 @@
-name: Hello World
+# name: Hello World
+# on: push  # runs when you push code
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Say Hello
+#         run: echo "Hello GitHub Actions!"
+
+name: Actions & Marketplace
 on: push  # runs when you push code
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
       - name: Say Hello
-        run: echo "Hello GitHub Actions!"
+        run: echo "Hello GitHub Actions & Marketplace"
+       with: 
+      node-version: '22'
+  - run: node --version
+
+    
