--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run Gemini Code Review
         uses: Truongnh1992/gemini-ai-code-reviewer@main
         with:
-          GITHUB_TOKEN: ${{ secrets.LOCAL_KEY }}
+          LOCAL_KEY: ${{ secrets.LOCAL_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GEMINI_MODEL: gemini-1.5-flash  # or your preferred model
    
